# archives

./: .gitignore  README.md  pyproject.toml
src/: archive_from_rar_to_zip.py  archives_manipulations.py  constants.py  create_archive_w_pass.py  kwargs.py  lib.py  main.py  make_secure_archive.py  make_zip_from_rar.py  push_files_to_zip_conditional.py  rar_to_zip.py  zip_files_by_name_pattern.py
src/core/: config.py  constants.py  funcs.py
