[project]
name = "archives"
version = "0.1.0"
description = "Process and repack archive files"
requires-python = ">=3.11"
dependencies = [
    "black>=23.3.0",
    "pytest>=7.0",
    "mypy>=1.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79  # PEP 8 compliant

[tool.pytest.ini_options]
testpaths = ["tests"]
